Templates for LAMMPS chain and LJ tests
removed extra space in rhodo cmd string

--- a/cbench/templates/lammps_lj.in
+++ b/cbench/templates/lammps_lj.in
@@ -1,9 +1,9 @@
-# lammps_rhodo job template
-# Uses LAMMPS benchmark code Rhodopsin
+# lammps_lj job template
+# Uses LAMMPS benchmark code LJ
 # NOTE: bash syntax is used here
 
 CMD="JOBLAUNCH_CMD_HERE$LAMMPSDIR/src/lmp_$LAMMPSMACHINE"
-STDIN_FILE="$LAMMPSDIR/bench/in.rhodo"
+STDIN_FILE="$LAMMPSDIR/bench/in.lj"
 
 cbench_run_cmd $CMD
 
