pickupt nodelist change from branch

--- a/cbench/templates/torque_header.in
+++ b/cbench/templates/torque_header.in
@@ -18,6 +18,9 @@
 # this tells us what type of cbench job this is
 CBENCH_RUN_TYPE=RUN_TYPE_HERE
 
+# grab the PBS_NODEFILE nodelist
+NODELIST=`cat $PBS_NODEFILE | uniq | xargs`
+
 # this tells us details of the Cbench job in the job output
 cbench_echo "Cbench numprocs: NUM_PROCS_HERE"
 cbench_echo "Cbench numnodes: NUM_NODES_HERE"
@@ -26,6 +29,7 @@ cbench_echo "Cbench benchmark: BENCHMARK_NAME_HERE"
 cbench_echo "Cbench jobname: JOBNAME_HERE"
 cbench_echo "Cbench testset: TESTSET_NAME_HERE"
 cbench_echo "Cbench joblaunchmethod: JOBLAUNCHMETHOD_HERE"
+cbench_echo "Cbench torque nodelist: $NODELIST"
 cbench_echo ""
 
 # grap the Torque jobid
