--- a/cbench/templates/interactive_header.in
+++ b/cbench/templates/interactive_header.in
@@ -15,7 +15,7 @@ CBENCH_RUN_TYPE=RUN_TYPE_HERE
 JOBID=`date +%j%H%M`
 
 # init files to catch stdout/stderr
-JOBDIR=`/bin/pwd`
+JOBDIR="TESTSET_PATH_HERE/IDENT_HERE/JOBNAME_HERE"
 JOBNAME=JOBNAME_HERE
 STDOUT_FILE="$JOBDIR/$JOBNAME".o$JOBID
 STDERR_FILE="$JOBDIR/$JOBNAME".e$JOBID
