minor change to the lammps build process: simply add 'lammps' to the make command to build it
also, it now uses make.def to print header and invoke command

--- a/cbench/Makefile
+++ b/cbench/Makefile
@@ -117,8 +117,8 @@ updatecbench:
 	@sbin/update_util_scripts
 
 # compile and install LAMMPS
-installlammps: install 
-	@sbin/install_lammps
+lammps: install 
+	$(do-lammps-install)
 
 #cbench-tests-rpm: 
 
