fixed compile for the IMB 3.0 version that was checked in not too long ago

--- a/cbench/opensource/IMB/Makefile
+++ b/cbench/opensource/IMB/Makefile
@@ -3,10 +3,15 @@ include ../../make.def
 INSTALLDIR = $(bin_dir)
 INSTALLTARGETS = src/IMB-MPI1
 
-default all clean:
-	cd src; $(MAKE) CC=$(CC) CLINKER='$(CC) $(LDFLAGS)' \
-        F90=$(F90) FLINKER='$(F90) $(LDFLAGS)' CPPFLAGS='$(CFLAGS)' \
-        LIBS=$(MPILIB) MPI_INCLUDE=. $@
+default all: src/make_cbench
+	$(MAKE) -C src -f make_cbench $@
+
+src/make_cbench:
+	cp -f make_cbench src/make_cbench
+
+clean:
+	$(MAKE) -C src -f make_cbench $@
+	rm -f src/make_cbench
 
 install uninstall:
 	$(do-$@)
