moving updates from old repo

--- a/trac/sf/trac.ini
+++ b/trac/sf/trac.ini
@@ -16,7 +16,8 @@ width = 128
 [logging]
 log_file = /tmp/persistent/cbench-sf/TRAC/log/trac.log
 log_level = ERROR
-log_type = file
+#log_type = file
+log_type = none
 
 [trac]
 default_charset = iso-8859-15
@@ -28,7 +29,7 @@ templates_dir = /home/groups/c/cb/cbench-sf/tracinstall/share/trac/templates
 default_handler = WikiModule
 metanav = login,logout,settings,help,about
 mainnav = wiki,timeline,roadmap,browser,tickets,newticket,search
-#repository_dir = /tmp/persistent/cbench-sf/SVN
+repository_dir = /tmp/persistent/cbench-sf/SVN
 
 [notification]
 always_notify_owner = false
