--- a/cbench/templates/bandwidth_osubw.in
+++ b/cbench/templates/bandwidth_osubw.in
@@ -2,6 +2,13 @@
 # Uses the OSU unidirectional bw test
 # NOTE: bash syntax is used here
 
+# does not run on less than 2 processes 
+ONEPROC=`expr NUM_PROCS_HERE \< 2`
+if [ "$ONEPROC" == "1" ]; then
+	cbench_echo "CBENCH NOTICE: osubw needs at least 2 processes"
+	exit
+fi
+
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/osu_bw"
 
 cbench_run_cmd $CMD
