--- a/cbench/templates/shakedown_stress.in
+++ b/cbench/templates/shakedown_stress.in
@@ -3,6 +3,13 @@
 # using the all-to-all nonblocking pattern
 # NOTE: bash syntax is used here
 
+# does not run on less than 2 processes 
+ONEPROC=`expr NUM_PROCS_HERE \< 2`
+if [ "$ONEPROC" == "1" ]; then
+	cbench_echo "CBENCH NOTICE: stress needs at least 2 processes"
+	exit
+fi
+
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/stress -async -all -quiet -ttime 00:30"
 
 cbench_run_cmd $CMD
