* use Cbench's CFLAGS * make MEMTST_CFLAGS work with whatever compilers Cbench is configured to use (using NOUNROLL_FLAGS instead of the GCC-specific options)

--- a/cbench/opensource/ctcs/Makefile
+++ b/cbench/opensource/ctcs/Makefile
@@ -6,7 +6,7 @@ INSTALLTARGETS = src/runin/memtst
 default: all
 
 all:
-	$(MAKE) -C src CC=$(PLAINCC) CLINKER='$(PLAINCC) $(LDFLAGS)' $@
+	$(MAKE) -C src CC=$(PLAINCC) CLINKER='$(PLAINCC) $(LDFLAGS)' CFLAGS='$(CFLAGS)' MEMTST_CFLAGS='$(CFLAGS) $(NOUNROLL_FLAGS)' $@
 
 clean:
 	$(MAKE) -C src dist-clean
