--- a/cbench/opensource/iozone/src/current/makefile
+++ b/cbench/opensource/iozone/src/current/makefile
@@ -633,12 +633,12 @@ iozone_linux.o:	iozone.c libbif.c libasync.c
 	@echo ""
 	@echo "Building iozone for Linux"
 	@echo ""
-	$(CC) -Wall -c -O3 -Dunix -DHAVE_ANSIC_C -DASYNC_IO -DHAVE_PREAD \
+	$(CC) -c -O3 -Dunix -DHAVE_ANSIC_C -DASYNC_IO -DHAVE_PREAD \
 		-DSHARED_MEM -Dlinux -D_LARGEFILE64_SOURCE $(CFLAGS) iozone.c \
 		-DNAME='"linux"' -o iozone_linux.o
-	$(CC) -Wall -c -O3 -Dunix -DHAVE_ANSIC_C -DASYNC_IO -D_LARGEFILE64_SOURCE \
+	$(CC) -c -O3 -Dunix -DHAVE_ANSIC_C -DASYNC_IO -D_LARGEFILE64_SOURCE \
 		-DSHARED_MEM -Dlinux $(CFLAGS) libbif.c -o libbif.o
-	$(CC) -Wall -c -O3 -Dunix -Dlinux -DHAVE_ANSIC_C -DASYNC_IO \
+	$(CC) -c -O3 -Dunix -Dlinux -DHAVE_ANSIC_C -DASYNC_IO \
 		-D_LARGEFILE64_SOURCE $(CFLAGS) libasync.c  -o libasync.o 
 
 fileop_AIX.o:	fileop.c
@@ -687,49 +687,49 @@ fileop_linux.o:	fileop.c
 	@echo ""
 	@echo "Building fileop for Linux"
 	@echo ""
-	$(CC) -Wall -c -O3 $(CFLAGS) fileop.c -o fileop_linux.o
+	$(CC) -c -O3 $(CFLAGS) fileop.c -o fileop_linux.o
 
 fileop_openbsd.o:	fileop.c
 	@echo ""
 	@echo "Building fileop for OpenBSD"
 	@echo ""
-	$(CC) -Wall -c -O $(CFLAGS) fileop.c -o fileop_openbsd.o
+	$(CC) -c -O $(CFLAGS) fileop.c -o fileop_openbsd.o
 
 fileop_macosx.o:	fileop.c
 	@echo ""
 	@echo "Building fileop for MAC OS X"
 	@echo ""
-	$(CC) -Wall -c -O $(CFLAGS) fileop.c -o fileop_macosx.o
+	$(CC) -c -O $(CFLAGS) fileop.c -o fileop_macosx.o
 
 fileop_linux-ia64.o:	fileop.c
 	@echo ""
 	@echo "Building fileop for Linux-ia64"
 	@echo ""
-	$(CC) -Wall -c -O3 $(CFLAGS) fileop.c -o fileop_linux-ia64.o
+	$(CC) -c -O3 $(CFLAGS) fileop.c -o fileop_linux-ia64.o
 
 fileop_linux-ppc.o:	fileop.c
 	@echo ""
 	@echo "Building fileop for Linux-powerpc"
 	@echo ""
-	$(CC) -Wall -c -O3 $(CFLAGS) fileop.c -o fileop_linux-ppc.o
+	$(CC) -c -O3 $(CFLAGS) fileop.c -o fileop_linux-ppc.o
 
 fileop_linux-ppc64.o:	fileop.c
 	@echo ""
 	@echo "Building fileop for Linux-powerpc64"
 	@echo ""
-	$(CC) -Wall -c -O3 $(CFLAGS) fileop.c -o fileop_linux-ppc64.o
+	$(CC) -c -O3 $(CFLAGS) fileop.c -o fileop_linux-ppc64.o
 
 fileop_linux-AMD64.o:	fileop.c
 	@echo ""
 	@echo "Building fileop for Linux-AMD64"
 	@echo ""
-	$(CC) -Wall -c -O3 $(CFLAGS) fileop.c -o fileop_linux-AMD64.o
+	$(CC) -c -O3 $(CFLAGS) fileop.c -o fileop_linux-AMD64.o
 
 fileop_windows.o: fileop.c
 	@echo ""
 	@echo "Building fileop for Windows"
 	@echo ""
-	$(GCC) -Wall -c -O3 $(CFLAGS) -DWindows fileop.c -o fileop_windows.o
+	$(GCC) -c -O3 $(CFLAGS) -DWindows fileop.c -o fileop_windows.o
 
 iozone_linux-ia64.o:	iozone.c libbif.c libasync.c
 	@echo ""
