updated for the migration to the 'cbench' project space on Sourceforge
plus new versions of software required to instantiate
TRAC on Sourceforge

--- a/trac/sf/trac.ini
+++ b/trac/sf/trac.ini
@@ -10,11 +10,11 @@ ignore_missing_pages = false
 src = site/tux_sonic.png
 alt = Cbench
 height = 128
-link = http://cbench-sf.sourceforge.net/cgi-bin/trac.cgi
+link = http://cbench.sourceforge.net
 width = 128
 
 [logging]
-log_file = /tmp/persistent/cbench-sf/TRAC/log/trac.log
+log_file = /tmp/persistent/cbench/TRAC/log/trac.log
 log_level = ERROR
 #log_type = file
 log_type = none
@@ -25,11 +25,11 @@ ignore_auth_case = false
 permission_store = DefaultPermissionStore
 check_auth_ip = true
 database = sqlite:db/trac.db
-templates_dir = /home/groups/c/cb/cbench-sf/tracinstall/share/trac/templates
+templates_dir = /home/groups/c/cb/cbench/tracinstall/share/trac/templates
 default_handler = WikiModule
 metanav = login,logout,settings,help,about
 mainnav = wiki,timeline,roadmap,browser,tickets,newticket,search
-repository_dir = /tmp/persistent/cbench-sf/SVN
+#repository_dir = /tmp/persistent/cbench/SVN
 
 [notification]
 always_notify_owner = false
@@ -44,8 +44,8 @@ smtp_from = trac@localhost
 smtp_user = 
 
 [project]
-url = http://cbench-sf.sourceforge.net/cgi-bin/trac.cgi
-footer =  <a href="http://sourceforge.net/projects/cbench-sf"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=153330&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a>
+url = http://cbench.sourceforge.net/cgi-bin/trac.cgi
+footer =  <a href="http://sourceforge.net/projects/cbench"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=54344&amp;type=2" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a>
 name = Cbench - Scalable Cluster Benchmarking and Testing
 descr = Cbench - Scalable Cluster Benchmarking and Testing
 icon = site/cbench.ico
@@ -83,7 +83,7 @@ password_file = /home/cbench/htpasswd.requests
 webadmin.* = enabled
 
 [graphviz]
-cache_dir = /tmp/persistent/cbench-sf/TRAC/htdocs/graphviz
+cache_dir = /tmp/persistent/cbench/TRAC/htdocs/graphviz
 prefix_url = /graphviz
 cmd_path = /usr/bin
 out_format = jpg
