--- a/cbench/templates/shakedown_xhpl.in
+++ b/cbench/templates/shakedown_xhpl.in
@@ -2,6 +2,7 @@
 # NOTE: bash syntax is used here
 
 cbench_echo "Cbench memory_util_factors: MEM_UTIL_FACTORS_HERE"
+cbench_echo
 
 CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/XHPL_BIN_HERE"
 
