start keeping some timestamp information in the output stream

--- a/cbench/templates/common_header.in
+++ b/cbench/templates/common_header.in
@@ -1,5 +1,10 @@
 # NOTE: bash syntax is used here
 
+# beginning timestamp of the job
+begin_time=`date --iso-8601=seconds`
+begin_epoch=`date +%s`
+cbench_echo "Cbench start timestamp: $begin_time"
+
 # spit out some other useful Cbench specific details of this job
 cbench_echo "Cbench test identifier: IDENT_HERE"
 cbench_echo "Cbench CBENCHTEST: CBENCHTEST_HERE"
@@ -15,3 +20,5 @@ cd "TESTSET_PATH_HERE/IDENT_HERE/JOBNAME_HERE"
 export OMP_NUM_THREADS=NUM_THREADS_PER_PROCESS_HERE
 cbench_echo "Cbench OMP_NUM_THREADS: $OMP_NUM_THREADS"
 
+# whitepace
+cbench_echo ""
