--- a/cbench/templates/lammps_chain.scaled.in
+++ b/cbench/templates/lammps_chain.scaled.in
@@ -1,9 +1,9 @@
-# lammps_lj job template
-# Uses LAMMPS benchmark code LJ
+# lammps_chain.scaled job template
+# Uses LAMMPS benchmark code Chain.scaled 
 # NOTE: bash syntax is used here
 
 CMD="JOBLAUNCH_CMD_HERE$LAMMPSDIR/src/lmp_$LAMMPSMACHINE"
-STDIN_FILE="$CBENCHTEST/lammps/bench/in.lj"
+STDIN_FILE="$CBENCHTEST/lammps/bench/in.chain.scaled"
 SCALING_PARAMS=""
 
 cbench_run_cmd $CMD
