--- a/cbench/templates/lammps_rhodo.scaled.in
+++ b/cbench/templates/lammps_rhodo.scaled.in
@@ -1,9 +1,9 @@
-# lammps_lj job template
-# Uses LAMMPS benchmark code LJ
+# lammps_rhodo.scaled job template
+# Uses LAMMPS benchmark code Rhodopsin
 # NOTE: bash syntax is used here
 
 CMD="JOBLAUNCH_CMD_HERE$LAMMPSDIR/src/lmp_$LAMMPSMACHINE"
-STDIN_FILE="$CBENCHTEST/lammps/bench/in.lj"
+STDIN_FILE="$CBENCHTEST/lammps/bench/in.rhodo.scaled"
 SCALING_PARAMS=""
 
 cbench_run_cmd $CMD
