--- a/cbench/templates/lammps_rhodo.in
+++ b/cbench/templates/lammps_rhodo.in
@@ -2,7 +2,7 @@
 # Uses LAMMPS benchmark code Rhodopsin
 # NOTE: bash syntax is used here
 
-CMD="JOBLAUNCH_CMD_HERE$LAMMPSDIR/src/lmp_$LAMMPSMACHINE"
+CMD="JOBLAUNCH_CMD_HERE $LAMMPSDIR/src/lmp_$LAMMPSMACHINE SCALING_PARAMS_HERE"
 STDIN_FILE="$CBENCHTEST/lammps/bench/in.rhodo"
 
 cbench_run_cmd $CMD
