--- a/cbench/templates/common_header.in
+++ b/cbench/templates/common_header.in
@@ -10,6 +10,7 @@ cbench_echo "Cbench test identifier: IDENT_HERE"
 cbench_echo "Cbench CBENCHTEST: CBENCHTEST_HERE"
 cbench_echo "Cbench job path: TESTSET_PATH_HERE/IDENT_HERE/JOBNAME_HERE"
 cbench_echo "Cbench job script: TESTSET_PATH_HERE/IDENT_HERE/JOBNAME_HERE/JOBSCRIPT_HERE"
+cbench_echo "Cbench jobid: $JOBID"
 
 # We don't want to assume that the batch system or whatever will
 # put us in the directory we want to be in for the job. So, we
