--- a/cbench/templates/interactive_header.in
+++ b/cbench/templates/interactive_header.in
@@ -19,7 +19,7 @@ JOBDIR="TESTSET_PATH_HERE/IDENT_HERE/JOBNAME_HERE"
 JOBNAME=JOBNAME_HERE
 STDOUT_FILE="$JOBDIR/$JOBNAME".o$JOBID
 STDERR_FILE="$JOBDIR/$JOBNAME".e$JOBID
-touch $STDOUT_FILE $STDERR_FILE
+touch $STDOUT_FILE
 
 # this tells us details of the Cbench job in the job output
 cbench_echo "Cbench numprocs: NUM_PROCS_HERE"
