use the download-url make function

--- a/cbench/opensource/stride/Makefile
+++ b/cbench/opensource/stride/Makefile
@@ -18,7 +18,7 @@ $(SRC): $(TAR)
 	$(MAKE) -C src -f Makefile.cbench clean
 
 $(TAR):
-	wget $(URL)
+	$(call download-url,$(URL))
 	-[ -e $(TAR) ] && touch $(TAR)
 
 clean:
