New makefile and old installation script for building LAMMPS

--- a/openapps/lammps/Makefile
+++ b/openapps/lammps/Makefile
@@ -2,31 +2,37 @@ include $(CBENCHOME)/make.def
 
 export CFLAGS
 
-SRC=lammps-11Apr08
+SRC=lammps
 TAR=$(SRC).tar.gz
 URL=http://lammps.sandia.gov/tars/$(TAR)
 
-EXECS = $(SRC)/lmp_cbench
+#the date at the end of the extracted lammps source will vary depending on the release version;
+# this doesn't matter for our uses
+LAMMPSPATH=$(CBENCHOME)/openapps/$(SRC)/$(SRC)-*
+
+#for use by the install script
+export LAMMPSDIR=$(CBENCHOME)/openapps/$(SRC)/lammps-src
+export LAMMPSMACHINE=spirit
+
+EXECS = $(LAMMPSDIR)/src/make/lmp_$(LAMMPSMACHINE)
 INSTALLDIR = $(bin_dir)
 INSTALLTARGETS = $(EXECS)
 
-#normal: $(SRC)
-#	cd $(SRC) && ln -sf ../Makefile.cbench Makefile.cbench
-#	$(MAKE) CXX=$(CXX) LINKER=$(CXX) -C $(SRC) -f Makefile.cbench
-
 $(SRC): $(TAR)
 	[ ! -d $(SRC) ] && tar zxf $(TAR)
-	ln -sf $(SRC) src
+	ln -sf $(LAMMPSPATH) lammps-src
+	@$(CBENCHOME)/openapps/lammps/install_lammps
 
 $(TAR):
 	$(call download-url,$(URL))
 	-[ -e $(TAR) ] && touch $(TAR)
 
 clean:
-	[ -d $(SRC) ] && $(MAKE) -C $(SRC) -f Makefile.cbench clean || :
+	/bin/rm -f $(LAMMPSDIR)
+	/bin/rm -rf $(LAMMPSPATH)
 
 distclean:
-	/bin/rm -rf $(SRC) $(TAR) src
+	/bin/rm -rf $(TAR) $(LAMMPSDIR)-src
 
 install uninstall:
 	$(do-$@)
