--- a/openapps/lammps/Makefile.cbench
+++ b/openapps/lammps/Makefile.cbench
@@ -10,7 +10,7 @@ SHELL = /bin/sh
 # before building LAMMPS
 
 CC =		$(CXX)
-CCFLAGS +=	-DFFT_FFTW -I$(FFTWINCLUDE)
+CCFLAGS =	-DFFT_FFTW -I$(FFTWINCLUDE) $(CFLAGS)
 DEPFLAGS =	-M
 LINK =		$(CC)
 LINKFLAGS =	-L$(FFTWLIB)
