fix relative to what make.def is doing with FFTWLIB

--- a/openapps/lammps/Makefile.cbench
+++ b/openapps/lammps/Makefile.cbench
@@ -11,7 +11,7 @@ CC =		$(CXX)
 CCFLAGS =	-DFFT_FFTW -I$(FFTWINCLUDE) $(CFLAGS)
 DEPFLAGS =	-M
 LINK =		$(CC)
-LINKFLAGS =	-L$(FFTWLIB)
+LINKFLAGS =	$(FFTWLIB)
 USRLIB =	-lfftw -lstdc++
 SYSLIB =	-lm
 SIZE =		size
