--- a/cbench/templates/lammps_chain.in
+++ b/cbench/templates/lammps_chain.in
@@ -2,7 +2,7 @@
 # Uses LAMMPS benchmark code Rhodopsin
 # NOTE: bash syntax is used here
 
-CMD="JOBLAUNCH_CMD_HERE $LAMMPSDIR/src/lmp_$LAMMPSMACHINE"
+CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/lmp_cbench"
 STDIN_FILE="$CBENCHTEST/lammps/bench/in.chain"
 
 cbench_run_cmd $CMD
