--- a/cbench/templates/lammps_lj.in
+++ b/cbench/templates/lammps_lj.in
@@ -2,7 +2,7 @@
 # Uses LAMMPS benchmark code LJ
 # NOTE: bash syntax is used here
 
-CMD="JOBLAUNCH_CMD_HERE $LAMMPSDIR/src/lmp_$LAMMPSMACHINE SCALING_PARAMS_HERE"
+CMD="JOBLAUNCH_CMD_HERE CBENCHTEST_BIN_HERE/lmp_cbench SCALING_PARAMS_HERE"
 STDIN_FILE="$CBENCHTEST/lammps/bench/in.lj"
 
 cbench_run_cmd $CMD
